--- a/practicalAI/requirements.txt
+++ b/practicalAI/requirements.txt
@@ -1,11 +1,11 @@
 argparse==1.4.0
-django==2.1.3
+django
 gensim==3.6.0
 image==1.5.27
 jsonschema==2.6.0
 jupyter==1.0.0
 matplotlib==2.1.2
-nltk==3.2.5
+nltk
 numpy==1.14.6
 pandas==0.22.0
 Pillow==7.1.0
@@ -24,4 +24,4 @@ tensorflow==2.4.0
 tqdm==4.28.1
 ujson==1.35
 urllib3==1.22
-Werkzeug==0.14.1
+Werkzeug
